usecases/models/orchestrator-8b/manifests/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: orchestrator-8b
  labels:
    kubernetes.io/metadata.name: orchestrator-8b
    opendatahub.io/dashboard: "true"
    app.kubernetes.io/name: orchestrator-8b
    app.kubernetes.io/part-of: orchestrator-8b
  annotations:
    argocd.argoproj.io/sync-wave: "-1"
