usecases/models/orchestrator-8b/manifests/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: orchestrator-8b
  labels:
    app.kubernetes.io/name: orchestrator-8b
    app.kubernetes.io/component: route
  annotations:
    argocd.argoproj.io/sync-wave: "2"
spec:
  to:
    kind: Service
    name: orchestrator-8b-route-svc
    weight: 100
  port:
    targetPort: 8080
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
  wildcardPolicy: None
